# gemini-live-transcript

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
scripts/: live_transcribe_cli.py  test_interrupt_resume.py
src/gemini_live_transcript/: __init__.py  cli.py  config.py  patches.py  runtime.py
